--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.5",
+    "@clerk/nextjs": "^6.12.6",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -22,6 +22,7 @@
     "community-discovery": "file:",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "geolocation-utils": "^1.2.6",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
