--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@clerk/nextjs": "^6.12.6",
     "@clerk/themes": "^2.2.22",
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "community-discovery": "file:",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
