--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@vercel/analytics": "^1.5.0",
@@ -27,6 +30,7 @@
     "community-discovery": "file:",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.5.0",
     "geolocation-utils": "^1.2.6",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
