--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -30,7 +31,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "community-discovery": "file:",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
     "geolocation-utils": "^1.2.6",
@@ -39,6 +40,7 @@
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
